--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,14 +7,17 @@ repository: https://github.com/dizitart/drules
 environment:
   sdk: ^3.3.4
 
+dependency_overrides:
+  meta: ^1.11.1
+
 dependencies:
   async: ^2.11.0
   event_bus: ^2.0.0
-  template_expressions: ^3.2.0+9
+  template_expressions: ^3.2.0+1
   uuid: ^4.4.0
 
 dev_dependencies:
-  build_runner: ^2.4.11
+  build_runner: ^2.4.6
   lints: ^4.0.0
   mockito: ^5.4.4
   test: ^1.24.9
